# ImGui_RAII

./: .gitignore  CMakeLists.txt  README.md  sln.DotSettings
cmake/: CPM.cmake
examples/setup_with_imgui/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/imgui_raii/: imgui_raii.hpp
tests/: CMakeLists.txt  main.cpp  tests.cpp
